feat: Add deployer filter to world and scene endpoints
