# src/controllers/handlers/worlds-handler.ts
@@ -1,5 +1,6 @@
 import { IHttpServerComponent } from '@well-known-components/interfaces'
 import { InvalidRequestError, getPaginationParams } from '@dcl/http-commons'
+import { EthAddress } from '@dcl/schemas'
 import { HandlerContextWithPath, WorldInfo, WorldsOrderBy, OrderDirection } from '../../types'
 
 type SnakeCaseWorldInfo = {
@@ -44,8 +45,13 @@ export async function getWorldsHandler(
   const { limit, offset } = getPaginationParams(ctx.url.searchParams)
 
   // Extract optional query parameters
-  const canDeploy = ctx.url.searchParams.get('can_deploy') ?? undefined
+  const deployer = ctx.url.searchParams.get('deployer') ?? undefined
   const search = ctx.url.searchParams.get('search') ?? undefined
+
+  // Validate deployer is a valid Ethereum address if provided
+  if (deployer && !EthAddress.validate(deployer)) {
+    throw new InvalidRequestError(`Invalid deployer address: ${deployer}. Must be a valid Ethereum address.`)
+  }
   const sortParam = ctx.url.searchParams.get('sort') ?? WorldsOrderBy.Name
   const orderParam = ctx.url.searchParams.get('order') ?? OrderDirection.Asc
 
@@ -69,7 +75,7 @@ export async function getWorldsHandler(
   const orderDirection = orderParam as OrderDirection
 
   const { worlds, total } = await ctx.components.worldsManager.getWorlds(
-    { canDeploy, search },
+    { deployer, search },
     { limit, offset, orderBy, orderDirection }
   )
 
